examples/test/testpolicy2742.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2742
  namespace: namespace258
spec:
  podSelector:
    matchLabels:
      key24: value6
      key21: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value7
          key33: value39
      podSelector:
        matchLabels:
          key33: value1
          key47: value48
          key34: value3
